--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 
 body{
-    background-image: url(./assets/Start\ instruction\ background.png) ;
+    background-image: url(./assets/start-instruction-bg.png) ;
     background-repeat: no-repeat;
     background-size: cover;
 }
