--- a/css/instructions.css
+++ b/css/instructions.css
@@ -80,10 +80,21 @@ body{
     text-align: justify;
     color: #257D5D;
     font-weight: 600;
+
 }
 
 .content>ul{
     height: 30vh;
     margin: 20px 20px 0 0 ;
 
+}
+
+#cross{
+    position: absolute;
+    right: 30vw;
+    font-size: 20px;
+    color: #0e555b;
+    text-align: end;
+    margin: 2vh;
+    font-weight: 900;
 }
