--- a/css/story.css
+++ b/css/story.css
@@ -138,3 +138,55 @@ body {
   width: 70vw;
   height: 30vh;
 }
+
+@media screen and (max-width: 430px) {
+  .small-logo > img {
+    width: 12vw;
+    margin: 2vh 2.5vh 0 0;
+  }
+
+  .settings > img {
+    width: 10vw;
+    margin: 2vh 2.5vh 0 0;
+  }
+
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .circles {
+    width: 90vw;
+    height: auto;
+  }
+
+  .c1, .c2, .c3 {
+    width: 80vw;
+    margin: 2vh 0;
+  }
+
+  .c3 {
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .captain {
+    width: 80vw;
+    height: auto;
+  }
+
+  .captain > img {
+    animation: none; /* Remove animation on smaller screens */
+  }
+  .circles > .c3> p {
+    color: #12e9fb;
+    text-align: center;
+    display: flex ;
+    align-self: center;
+    /* align-items: end; */
+    font-family: Kaushan Script;
+    font-size: 7px;
+    font-weight: 400;
+    width: 160px;
+  }
+}
